@@ -1,4 +1,4 @@
-linear_predictor <- function(draws, i = NULL) {
+linear_predictor <- function(draws, i = NULL, fdraws = NULL) {
   # compute the linear predictor (eta) for brms models
   # Args:
   #   draws: a list generated by extract_draws containing
@@ -6,6 +6,9 @@ linear_predictor <- function(draws, i = NULL) {
   #   i: An optional vector indicating the observation(s) 
   #     for which to compute eta. If NULL, eta is computed 
   #     for all all observations at once.
+  #   fdraws: Optional full brmsdraws object of the model. 
+  #     Currently only needed for predicting new data in models 
+  #     with autocorrelation structures.
   # Returns:
   #   Usually an S x N matrix where S is the number of samples
   #   and N is the number of observations or length of i if specified. 
@@ -19,13 +22,13 @@ linear_predictor <- function(draws, i = NULL) {
     predictor_gp(draws, i) +
     predictor_offset(draws, i, nobs)
   # some autocorrelation structures depend on eta
-  eta <- predictor_autocor(eta, draws, i)
+  eta <- predictor_autocor(eta, draws, i, fdraws = fdraws)
   # intentionally last
   eta <- predictor_cs(eta, draws, i)
   unname(eta)
 }
 
-nonlinear_predictor <- function(draws, i = NULL) {
+nonlinear_predictor <- function(draws, i = NULL, ...) {
   # compute the non-linear predictor (eta) for brms models
   # Args:
   #   draws: a list generated by extract_draws containing
@@ -33,13 +36,15 @@ nonlinear_predictor <- function(draws, i = NULL) {
   #   i: An optional vector indicating the observation(s) 
   #      for which to compute eta. If NULL, eta is computed 
   #      for all all observations at once.
+  #   ...: further arguments passed to linear_predictor
   # Returns:
   #   Usually an S x N matrix where S is the number of samples
   #   and N is the number of observations or length of i if specified. 
   nlmodel_list <- list()
   nlpars <- names(draws$nlpars)
   for (nlp in nlpars) {
-    nlmodel_list[[nlp]] <- linear_predictor(draws$nlpars[[nlp]], i = i)
+    nlmodel_list[[nlp]] <- 
+      linear_predictor(draws$nlpars[[nlp]], i = i, ...)
   }
   for (cov in names(draws$C)) {
     nlmodel_list[[cov]] <- p(draws$C[[cov]], i, row = FALSE)  
@@ -456,7 +461,7 @@ predictor_offset <- function(draws, i, nobs) {
   matrix(eta, ncol = nobs, byrow = TRUE)
 }
 
-predictor_autocor <- function(eta, draws, i) {
+predictor_autocor <- function(eta, draws, i, fdraws = NULL) {
   # compute eta for autocorrelation structures
   # eta has to be passed to this function in order for
   # ARMA structures to work correctly
@@ -471,7 +476,8 @@ predictor_autocor <- function(eta, draws, i) {
     }
     eta <- .predictor_arma(
       eta, ar = draws$ac$ar, ma = draws$ac$ma, 
-      Y = draws$ac$Y, J_lag = draws$ac$J_lag
+      Y = draws$ac$Y, J_lag = draws$ac$J_lag, 
+      fdraws = fdraws
     )
   }
   if (!is.null(draws$ac$rcar)) {
@@ -484,7 +490,8 @@ predictor_autocor <- function(eta, draws, i) {
 }
 
 .predictor_arma <- function(eta, ar = NULL, ma = NULL, 
-                            Y = NULL, J_lag = NULL) {
+                            Y = NULL, J_lag = NULL,
+                            fdraws = NULL) {
   # compute eta for ARMA effects
   # TODO: use C++ for this function
   # Args:
@@ -493,11 +500,16 @@ predictor_autocor <- function(eta, draws, i) {
   #   ma: moving average samples (can be NULL)
   #   Y: vector of response values
   #   J_lag: autocorrelation lag for each observation
-  #   link: the link function as character string
   # Returns:
   #   new linear predictor samples updated by ARMA effects
   if (is.null(ar) && is.null(ma)) {
     return(eta)
+  }
+  if (anyNA(Y)) {
+    # predicting Y will be necessary at some point
+    stopifnot(is.brmsdraws(fdraws) || is.mvbrmsdraws(fdraws))
+    predict_fun <- paste0("predict_", fdraws$f$fun)
+    predict_fun <- get(predict_fun, asNamespace("brms"))
   }
   S <- nrow(eta)
   Kar <- ifelse(is.null(ar), 0, ncol(ar))
@@ -514,7 +526,13 @@ predictor_autocor <- function(eta, draws, i) {
       # add MA correlations
       eta[, n] <- eta[, n] + rowSums(ma * E[, 1:Kma, K])
     }
-    e[, K] <- Y[n] - eta[, n]
+    y <- Y[n]
+    if (is.na(y)) {
+      # the response value was not observed
+      fdraws$dpars$mu <- eta
+      y <- predict_fun(n, fdraws)
+    }
+    e[, K] <- y - eta[, n]
     I <- seq_len(J_lag[n])
     if (length(I)) {
       E[, I, K + 1] <- e[, K + 1 - I]
